test/Fail/PrimSeq.err
PrimSeq.agda:16.11-15: error: [UnequalTerms]
primForce b not != not b of type Bool
when checking that the expression refl has type force b not ≡ not b
